--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -64,8 +64,8 @@ pypdf==4.3.1
 fpdf2==2.8.2
 pymdown-extensions==10.14.2
 docx2txt==0.8
-python-pptx==1.0.0
-unstructured==0.16.17
+python-pptx
+unstructured==0.17.2
 nltk==3.9.1
 Markdown==3.7
 pypandoc==1.15
@@ -81,7 +81,7 @@ azure-ai-documentintelligence==1.0.0
 
 pillow==11.1.0
 opencv-python-headless==4.11.0.86
-rapidocr-onnxruntime==1.3.24
+rapidocr-onnxruntime==1.2.3
 rank-bm25==0.2.2
 
 onnxruntime==1.20.1
